--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,5 @@
 server.port=8044
+server.servlet.context-path=/courseregis
 
 ##Data Source Configs
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
