--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 	<groupId>lk.ijse.cmjd_110</groupId>
 	<artifactId>courseRegisterPro</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>courseRegisterPro</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Course Registration System for a educational institute</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -44,6 +44,10 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
 
 		<dependency>
@@ -85,6 +89,8 @@
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+                            <groupId>org.springframework.boot</groupId>
+                            <artifactId>spring-boot-starter-logging</artifactId>
 						</exclude>
 					</excludes>
 				</configuration>
