--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true # Formats SQL queries for better readability
 
+## Logs
+logging.level.root=INFO
+logging.file.name=/media/thanura/Data Store/CMJD/CMJD-110-JavaLogs/applog.log
